--- a/.github/workflows/external_trigger.yml
+++ b/.github/workflows/external_trigger.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   trigger_info:
-    if: ${{ github.event_name == "workflow_dispatch" }}
+    if: ${{ github.event_name == 'workflow_dispatch' }}
     name: ${{ github.event.inputs.repo_name }} by ${{ github.event.inputs.actor }}
     runs-on: ubuntu-latest
     steps:
