test sending email

--- a/.github/workflows/external_trigger.yml
+++ b/.github/workflows/external_trigger.yml
@@ -51,3 +51,8 @@ jobs:
           echo "repo_name: ${{ github.event.inputs.repo_name }}"
           echo "docker_tag: ${{ github.event.inputs.docker_tag }}"
           echo "actor: ${{ github.event.inputs.actor }}"
+          echo "pusher_email: ${{ github.event.inputs.pusher_email }}"
+      - name: Send email
+        run: |
+          echo "A METplus use case testing workflow failed after it was triggered by changes you pushed in REPO COMMIT_HASH. Changes from your push did not necessarily break the tests. It is possible that the tests were failing prior to your push. Please investigate the differences that may have been caused by your changes. https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}" | \
+          mail -s "TEST: METplus Use Case Tests Failed" "metplus-bot@ucar.edu mccabe@ucar.edu"
