--- a/.github/workflows/external_trigger.yml
+++ b/.github/workflows/external_trigger.yml
@@ -56,7 +56,7 @@ jobs:
         uses: dawidd6/action-send-mail@v2
         with:
           server_address: smtp.gmail.com
-          server_address: 465
+          server_port: 465
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: "TEST: ${{ github.repository }} Use Case Tests Failed"
