--- a/.github/workflows/external_trigger.yml
+++ b/.github/workflows/external_trigger.yml
@@ -63,10 +63,6 @@ jobs:
       #    username: ${{ secrets.EMAIL_USERNAME }}
       #    password: ${{ secrets.EMAIL_PASSWORD }}
       #    subject: "TEST: ${{ github.repository }} Use Case Tests Failed"
-      #    body: "A METplus use case testing workflow failed after it was triggered by changes you p\
-ushed in REPO COMMIT_HASH. Changes from your push did not necessarily break the tests. It is possi\
-ble that the tests were failing prior to your push. Please investigate the differences that may ha\
-ve been caused by your changes. https://github.com/${{github.repository}}/actions/runs/${{github.r\
-un_id}}"
+      #    body: "A METplus use case testing workflow failed after it was triggered by changes you pushed in REPO COMMIT_HASH. Changes from your push did not necessarily break the tests. It is possible that the tests were failing prior to your push. Please investigate the differences that may have been caused by your changes. https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
       #    to: "metplus-bot@ucar.edu mccabe@ucar.edu"
       #    from: George via Automation
