--- a/.github/workflows/test_matrix.yml
+++ b/.github/workflows/test_matrix.yml
@@ -17,7 +17,8 @@ jobs:
   test:
     name: Run MET Unit Tests
     runs-on: ubuntu-latest
-    needs: [pre1, ${{ matrix.needs }}]
+    #needs: [pre1, ${{ matrix.needs }}]
+    needs: [pre1]
     id: ${{ matrix.tests }}
     strategy:
       matrix:
