--- a/.github/workflows/test_matrix.yml
+++ b/.github/workflows/test_matrix.yml
@@ -1,34 +1,19 @@
-name: Test Matrix
+name: Test Action
 on:
   push:
     branches:
-      - 'test_matrix'
+      - 'test_action'
 
 jobs:
-  pre1:
+  run_action:
     runs-on: ubuntu-latest
     steps:
-      - run: echo Running pre job 1
-  pre2:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo Running pre job 2
-
-  ${{ matrix.tests }}:
-    name: Run MET Unit Tests
-    runs-on: ubuntu-latest
-    #needs: [pre1, ${{ matrix.needed }}]
-    needs: [pre1]
-    id: ${{ matrix.tests }}
-    strategy:
-      matrix:
-        needed: pre2
-        tests:
-          - 'gaussian'
-          - 'airnow'
-        include:
-          - tests: 'ioda2nc'
-            needed: 'pre2, airnow'
-      fail-fast: false
-    steps:
-      - run: echo ${{ matrix.tests }}
+      - uses: dtcenter/metplus-data-update@v0
+        with:
+          - docker_name: bad_name
+          - docker_pass: bad_pass
+          - repo_name: MET
+          - data_prefix: unit_test
+          - branch_name: develop
+          - data_repo_dev: metplus-data-output
+          - docker_data_dir: /data/input/MET_test_data/unit_test
