--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -9,11 +9,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: dtcenter/metplus-data-update@v0
-        args:
-          docker_name: bad_name
-          docker_pass: bad_pass
-          repo_name: MET
-          data_prefix: unit_test
-          branch_name: develop
-          data_repo_dev: metplus-data-output
-          docker_data_dir: /data/input/MET_test_data/unit_test
+        with:
+          args:
+            docker_name: bad_name
+            docker_pass: bad_pass
+            repo_name: MET
+            data_prefix: unit_test
+            branch_name: develop
+            data_repo_dev: metplus-data-output
+            docker_data_dir: /data/input/MET_test_data/unit_test
