--- a/.github/workflows/test_action.yml
+++ b/.github/workflows/test_action.yml
@@ -8,12 +8,12 @@ jobs:
   run_action:
     runs-on: ubuntu-latest
     steps:
-      - uses: dtcenter/metplus-data-update@2c5532041c537420c2802c99b14bba5b520bdf33
+      - uses: dtcenter/metplus-action-data-update@2609349a32082fe6141aa998e4271c870e8da342
         with:
           docker_name: ${{ secrets.DOCKER_USERNAME }}
           docker_pass: ${{ secrets.DOCKER_PASSWORD }}
           repo_name: MET
           data_prefix: unit_test
           branch_name: develop
-          data_repo_dev: met-data-dev
-          docker_data_dir: /data/input/MET_test_data/unit_test
+          data_repo_dev: metplus-data-dev
+          docker_data_dir: /data/input/MET_test_data
