--- a/.github/workflows/update_truth.yml
+++ b/.github/workflows/update_truth.yml
@@ -9,12 +9,12 @@ jobs:
     name: "Update or create truth reference branch"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
       - name: Check if branch is valid
         run: |
           branch_name=${GITHUB_REF#refs/heads/}
           if [[ $branch_name == "develop" ]] || [[ ${branch_name:0:6} =~ ^main_v[0-9]+([.][0-9]+)$ ]]; then
             exit 0;
           fi
-          echo Branch must be develop or match main_vX.Y
+          echo Branch must be develop or match main_vX.Y: $branch_name
           exit 1
+      - uses: actions/checkout@v3
