--- a/.github/workflows/update_truth.yml
+++ b/.github/workflows/update_truth.yml
@@ -22,13 +22,16 @@ jobs:
           if [[ $branch_name =~ ^main_v[0-9]+\.[0-9]+$ ]]; then exit 0; fi
           echo Branch is $branch_name - must be develop or match main_vX.Y
           exit 1
-      #- uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Check if ref branch exists
         run: |
+          cd ${GITHUB_WORKSPACE}
           if [[ -z "$(git ls-remote --heads origin ${branch_name}-ref)" ]]; then
             echo ${branch_name}-ref does not exist -- create it from $branch_name
             echo git checkout -b ${branch_name}-ref
+            git checkout -b ${branch_name}-ref
             echo git push origin ${branch_name}-ref
+            git push origin ${branch_name}-ref
           else
             echo ${branch_name}-ref does exist -- update it
             echo git merge -s ours ${branch_name}-ref
