--- a/.github/workflows/update_truth.yml
+++ b/.github/workflows/update_truth.yml
@@ -25,6 +25,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Check if ref branch exists
         run: |
+          branch_name=${GITHUB_REF#refs/heads/}
           cd ${GITHUB_WORKSPACE}
           if [[ -z "$(git ls-remote --heads origin ${branch_name}-ref)" ]]; then
             echo ${branch_name}-ref does not exist -- create it from $branch_name
