--- a/.github/workflows/update_truth.yml
+++ b/.github/workflows/update_truth.yml
@@ -42,5 +42,5 @@ jobs:
             echo git push origin ${branch_name}
             git push origin ${branch_name}
           fi
-          echo Title: Update ${branch_name}-ref after ${{ github.event.inputs.pull_requests }}
+          echo Title: Update ${branch_name}-ref after $(echo ${{ github.event.inputs.pull_requests }})
           echo Body: Change summary: ${{ github.event.inputs.change_summary }}
