--- a/.github/workflows/update_truth.yml
+++ b/.github/workflows/update_truth.yml
@@ -40,6 +40,8 @@ jobs:
           fi
           
           echo ${branch_name}-ref does exist -- update it
+          echo git checkout ${branch_name}
+          git checkout ${branch_name}
           echo git merge -s ours origin/${branch_name}-ref
           git merge -s ours origin/${branch_name}-ref
           echo git push origin ${branch_name}
@@ -48,9 +50,8 @@ jobs:
           echo Body: Change summary: ${{ github.event.inputs.change_summary }}
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v4
-        with:
-          base: ${{ env.branch_name }}-ref
-          branch: ${{ env.branch_name }}
-          title: Update ${branch_name}-ref after "${{ github.event.inputs.pull_requests }}"
-          body: Created by ${{ github.actor}}\n "${{ github.event.inputs.change_summary }}"
+        run: gh pr create --base $BASE --body "$BODY" --title "$TITLE"
+        env:
+          BASE: ${{ env.branch_name }}-ref
+          BODY: Update ${branch_name}-ref after "${{ github.event.inputs.pull_requests }}"
+          TITLE: Created by ${{ github.actor}}\n"${{ github.event.inputs.change_summary }}"
