--- a/.github/workflows/update_truth.yml
+++ b/.github/workflows/update_truth.yml
@@ -54,5 +54,5 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
           BASE: ${{ env.branch_name }}-ref
-          BODY: Update ${branch_name}-ref after "${{ github.event.inputs.pull_requests }}"
-          TITLE: Created by ${{ github.actor}}\n"${{ github.event.inputs.change_summary }}"
+          BODY: Created by ${{ github.actor}}\n"${{ github.event.inputs.change_summary }}"
+          TITLE: Update ${{ env.branch_name }}-ref after "${{ github.event.inputs.pull_requests }}"
