--- a/.github/workflows/substring.yml
+++ b/.github/workflows/substring.yml
@@ -12,4 +12,4 @@ jobs:
       - run: echo "branch name is $branch_name"
       - run: echo $BRANCH_NAME
         env:
-          BRANCH_NAME: $branch_name
+          BRANCH_NAME: ${{ env.branch_name }}
