--- a/.github/workflows/create_conda_envs.yml
+++ b/.github/workflows/create_conda_envs.yml
@@ -8,7 +8,7 @@ on:
         required: false
 
 env:
-  METPLUS_ENV_VERSION: v6.0
+  METPLUS_ENV_VERSION: v6.0-test
 
 jobs:
   conda:
@@ -20,11 +20,15 @@ jobs:
           repository: 'dtcenter/METplus'
       - name: Build
         run: |
-          cd internal/scripts/docker_env; ls
+          cd internal/scripts/docker_env
           echo docker build -t dtcenter/metplus-envs:conda.${METPLUS_ENV_VERSION} \
             -f Dockerfile.conda .
+          docker build -t dtcenter/metplus-envs:conda.${METPLUS_ENV_VERSION} \
+            -f Dockerfile.conda .
       - name: Push
-        run: echo docker push dtcenter/metplus-envs:conda.${METPLUS_ENV_VERSION}
+        run: |
+          echo docker push dtcenter/metplus-envs:conda.${METPLUS_ENV_VERSION}
+          docker push dtcenter/metplus-envs:conda.${METPLUS_ENV_VERSION}
   metplus_base:
     name: "Create metplus_base env"
     runs-on: ubuntu-latest
@@ -35,9 +39,14 @@ jobs:
           repository: 'dtcenter/METplus'
       - name: Build
         run: |
-          cd internal/scripts/docker_env; ls
+          cd internal/scripts/docker_env
           echo docker build -t dtcenter/metplus-envs:metplus_base.${METPLUS_ENV_VERSION} \
             --build-arg METPLUS_ENV_VERSION \
             -f Dockerfile.metplus_base .
+          docker build -t dtcenter/metplus-envs:metplus_base.${METPLUS_ENV_VERSION} \
+            --build-arg METPLUS_ENV_VERSION \
+            -f Dockerfile.metplus_base .
       - name: Push
-        run: echo docker push dtcenter/metplus-envs:metplus_base.${METPLUS_ENV_VERSION}
+        run: |
+          echo docker push dtcenter/metplus-envs:metplus_base.${METPLUS_ENV_VERSION}
+          docker push dtcenter/metplus-envs:metplus_base.${METPLUS_ENV_VERSION}
