--- a/.github/workflows/create_conda_envs.yml
+++ b/.github/workflows/create_conda_envs.yml
@@ -9,6 +9,7 @@ on:
 
 env:
   METPLUS_ENV_VERSION: v6.0-test
+  DOCKERFILE: Dockerfile
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -16,6 +17,9 @@ jobs:
   conda:
     name: "Create conda env"
     runs-on: ubuntu-latest
+    env:
+      ENV_NAME: conda
+      DOCKERFILE: Dockerfile.conda
     steps:
       - uses: actions/checkout@v4
         with:
@@ -27,35 +31,67 @@ jobs:
           path: METplus
       - name: Build
         run: ghatest/.github/jobs/build_conda_image.sh
-        env:
-          IMG_NAME: conda
-          DOCKERFILE: Dockerfile.conda
-
       - name: Push
-        run: |
-          echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
-          echo docker push dtcenter/metplus-envs:conda.${METPLUS_ENV_VERSION}
-          docker push dtcenter/metplus-envs:conda.${METPLUS_ENV_VERSION}
+        run: ghatest/.github/jobs/push_conda_image.sh
 
   metplus_base:
     name: "Create metplus_base env"
     runs-on: ubuntu-latest
     needs: [conda]
+    env:
+      ENV_NAME: metplus_base
+      DOCKERFILE: Dockerfile.metplus_base
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
         with:
           repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
       - name: Build
-        run: |
-          cd internal/scripts/docker_env
-          echo docker build -t dtcenter/metplus-envs:metplus_base.${METPLUS_ENV_VERSION} \
-            --build-arg METPLUS_ENV_VERSION \
-            -f Dockerfile.metplus_base .
-          docker build -t dtcenter/metplus-envs:metplus_base.${METPLUS_ENV_VERSION} \
-            --build-arg METPLUS_ENV_VERSION \
-            -f Dockerfile.metplus_base .
+        run: ghatest/.github/jobs/build_conda_image.sh
       - name: Push
-        run: |
-          echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
-          echo docker push dtcenter/metplus-envs:metplus_base.${METPLUS_ENV_VERSION}
-          docker push dtcenter/metplus-envs:metplus_base.${METPLUS_ENV_VERSION}
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  py_embed_base:
+    name: "Create py_embed_base env"
+    runs-on: ubuntu-latest
+    needs: [metplus_base]
+    env:
+      ENV_NAME: py_embed_base
+      DOCKERFILE: Dockerfile.py_embed_base
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  h5py:
+    runs-on: ubuntu-latest
+    needs: [py_embed_base]
+    env:
+      ENV_NAME: h5py
+      BASE_ENV: py_embed_base
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
