--- a/.github/workflows/create_conda_envs.yml
+++ b/.github/workflows/create_conda_envs.yml
@@ -10,6 +10,7 @@ on:
 env:
   METPLUS_ENV_VERSION: v6.0-test
   DOCKERFILE: Dockerfile
+  BASE_ENV: metplus_base
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -30,9 +31,9 @@ jobs:
           sparse-checkout: internal
           path: METplus
       - name: Build
-        run: ghatest/.github/jobs/build_conda_image.sh
+        run: echo ghatest/.github/jobs/build_conda_image.sh
       - name: Push
-        run: ghatest/.github/jobs/push_conda_image.sh
+        run: echo ghatest/.github/jobs/push_conda_image.sh
 
   metplus_base:
     name: "Create metplus_base env"
@@ -51,9 +52,9 @@ jobs:
           sparse-checkout: internal
           path: METplus
       - name: Build
-        run: ghatest/.github/jobs/build_conda_image.sh
+        run: echo ghatest/.github/jobs/build_conda_image.sh
       - name: Push
-        run: ghatest/.github/jobs/push_conda_image.sh
+        run: echo ghatest/.github/jobs/push_conda_image.sh
 
   py_embed_base:
     name: "Create py_embed_base env"
@@ -72,9 +73,9 @@ jobs:
           sparse-checkout: internal
           path: METplus
       - name: Build
-        run: ghatest/.github/jobs/build_conda_image.sh
+        run: echo ghatest/.github/jobs/build_conda_image.sh
       - name: Push
-        run: ghatest/.github/jobs/push_conda_image.sh
+        run: echo ghatest/.github/jobs/push_conda_image.sh
 
   h5py:
     runs-on: ubuntu-latest
@@ -82,6 +83,301 @@ jobs:
     env:
       ENV_NAME: h5py
       BASE_ENV: py_embed_base
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: echo ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: echo ghatest/.github/jobs/push_conda_image.sh
+
+  metdataio:
+    runs-on: ubuntu-latest
+    needs: [metplus_base]
+    env:
+      ENV_NAME: metdataio
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  pygrib:
+    runs-on: ubuntu-latest
+    needs: [py_embed_base]
+    env:
+      ENV_NAME: pygrib
+      BASE_ENV: py_embed_base
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  cfgrib:
+    runs-on: ubuntu-latest
+    needs: [metplus_base]
+    env:
+      ENV_NAME: cfgrib
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  netcdf4:
+    runs-on: ubuntu-latest
+    needs: [metplus_base]
+    env:
+      ENV_NAME: netcdf4
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  xesmf:
+    runs-on: ubuntu-latest
+    needs: [metplus_base]
+    env:
+      ENV_NAME: xesmf
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  spacetime:
+    runs-on: ubuntu-latest
+    needs: [metplus_base]
+    env:
+      ENV_NAME: spacetime
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  metplotpy:
+    runs-on: ubuntu-latest
+    needs: [metplus_base]
+    env:
+      ENV_NAME: metplotpy
+      DOCKERFILE: Dockerfile.cartopy
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  weatherregime:
+    runs-on: ubuntu-latest
+    needs: [metplotpy]
+    env:
+      ENV_NAME: weatherregime
+      BASE_ENV: metplotpy
+      DOCKERFILE: Dockerfile.cartopy
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  cycloneplotter:
+    runs-on: ubuntu-latest
+    needs: [metplus_base]
+    env:
+      ENV_NAME: cycloneplotter
+      DOCKERFILE: Dockerfile.cartopy
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  icecover:
+    runs-on: ubuntu-latest
+    needs: [py_embed_base]
+    env:
+      ENV_NAME: icecover
+      BASE_ENV: py_embed_base
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  gempak:
+    runs-on: ubuntu-latest
+    needs: [metplus_base]
+    env:
+      ENV_NAME: gempak
+      DOCKERFILE: Dockerfile.gempak_env
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  gfdl-tracker:
+    runs-on: ubuntu-latest
+    needs: [metplus_base]
+    env:
+      ENV_NAME: gfdl-tracker
+      DOCKERFILE: Dockerfile.gfdl-tracker
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  geovista:
+    runs-on: ubuntu-latest
+    needs: [metplus_base]
+    env:
+      ENV_NAME: geovista
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  pandac:
+    runs-on: ubuntu-latest
+    needs: [metplotpy]
+    env:
+      ENV_NAME: pandac
+      BASE_ENV: metplotpy
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: ghatest
+      - uses: actions/checkout@v4
+        with:
+          repository: 'dtcenter/METplus'
+          sparse-checkout: internal
+          path: METplus
+      - name: Build
+        run: ghatest/.github/jobs/build_conda_image.sh
+      - name: Push
+        run: ghatest/.github/jobs/push_conda_image.sh
+
+  diff:
+    runs-on: ubuntu-latest
+    needs: [netcdf4]
+    env:
+      ENV_NAME: diff
+      BASE_ENV: netcdf4
     steps:
       - uses: actions/checkout@v4
         with:
